# QuText

./: QuText.cabal  README.md
app/: Main.hs
src/: Act.hs  Parse.hs
test/: test.sh  test.sh.bak
